Replaced all Text With fillers

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header">
         <!-- Top Navigation Section -->
         <div class="headerTop">
-            <h3 class="headerLogoText">Portfolio</h3>
+            <h3 class="headerLogoText">Page Title</h3>
             <div class="headerLinksContainer">
                 <a class="headerLinks" href="https://github.com/" target="_blank" rel="noopener noreferrer">Github</a>
                 <a class="headerLinks" href="https://www.linkedin.com/in/hassan-zafar-634855291/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
@@ -22,16 +22,20 @@
         <!-- Title Section -->
         <div class="TitleContainer">
             <div class="headerTitle">
-                <h1 class="Title">Hassan Zafar</h1>
-                <p class="subtitle">This is some subtext that goes here under the main title. It's a smaller font, and the color is lower contrast.</p>
-                <p class="subtitle">This is some subtext that goes here under the main title. It's a smaller font, and the color is lower contrast.</p>
-                <p class="subtitle">This is some subtext that goes here under the main title. It's a smaller font, and the color is lower contrast.</p>
-                <button class="ctaButton">Sign up</button>
+                <h1 class="Title">Sample Name </h1>
+                <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet sapien mauris. Vestibulum egestas eros vel nibh tempus maximus. Mauris luctus neque enim, vel dignissim massa gravida at. Donec lectus ante, sodales et neque pulvinar, aliquam porta tortor. Nam non purus elit. Etiam libero purus, volutpat nec sagittis id, condimentum tincidunt lorem. Vivamus ultricies odio porttitor tempus rutrum.
+
+                </p>
+                <button class="ctaButton">Sample Button</button>
             </div>
 
             <img class="headerImage" src="./images/placeholder.png" alt="image">
         </div>
+
+        
     </div>
+
+    
 
 </body>
 </html>
